Add components to site

--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: default
+      layout: post
   - scope:
       path: ""
       type: pages
     values:
-      layout: default
+      layout: page
 
 # Build settings
 markdown: kramdown
