--- a/package.json
+++ b/package.json
@@ -37,12 +37,9 @@
   "jspm": {
     "configFile": "src/js/config.jspm.js",
     "dependencies": {
-      "angular": "github:angular/bower-angular@^1.5.7",
-      "angular-animate": "github:angular/bower-angular-animate@^1.5.7",
-      "angular-aria": "github:angular/bower-angular-aria@^1.5.7",
-      "angular-material": "github:angular/bower-material@^1.0.9",
-      "angular-route": "github:angular/bower-angular-route@^1.5.7",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
       "keyboardjs": "npm:keyboardjs@^2.2.1",
+      "material-design-lite": "github:google/material-design-lite@^1.1.3",
       "tone": "npm:tone@^0.7.1",
       "underscore": "npm:underscore@^1.8.3",
       "web-midi-api": "npm:web-midi-api@^1.4.4"
