--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,16 @@
-# EditorConfig helps developers define and maintain consistent
-# coding styles between different editors and IDEs
-# editorconfig.org
+# EditorConfig is awesome: http://EditorConfig.org
 
+# top-most EditorConfig file
 root = true
 
-
+# Unix-style newlines with a newline ending every file
 [*]
-
-# Change these settings to your own preference
-indent_style = space
-indent_size = 2
-
-# We recommend you to keep these unchanged
 end_of_line = lf
+insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
+# 2 space indentation
+[**.*]
+indent_style = space
+indent_size = 2
