--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-bower_components
-dist
 node_modules
 jspm_packages
+bower_components
+.idea
+.DS_STORE
+/dist
+build/reports
+coverage
+test/e2e/dist
+/export
