--- a/package.json
+++ b/package.json
@@ -2,55 +2,92 @@
   "name": "synthia",
   "private": true,
   "version": "0.1.0",
-  "description": "A configurable modular synthisizer.",
-  "main": "index.html",
-  "scripts": {
-    "test": "gulp test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sccherry/synthia.git"
-  },
+  "description": "A configurable modular synthesizer.",
   "keywords": [
+    "aurelia",
     "webaudio"
   ],
-  "author": "Steve Cherry",
-  "license": "GPL-3.0",
+  "homepage": "https://sccherry.github.io/synthia",
   "bugs": {
     "url": "https://github.com/sccherry/synthia/issues"
   },
-  "homepage": "https://github.com/sccherry/synthia#readme",
+  "license": "GPL-3.0",
+  "author": "Steve Cherry <stevenccherry@gmail.com> (http://stevecherry.net/)",
+  "main": "dist/main.js",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/sccherry/synthia"
+  },
+  "scripts": {
+    "test": "gulp test",
+    "e2e": "gulp serve webdriver-standalone e2e"
+  },
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
+    "aurelia-bundler": "^0.4.0",
+    "aurelia-tools": "^0.2.4",
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-syntax-flow": "^6.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.12.0",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-stage-1": "^6.5.0",
     "browser-sync": "^2.13.0",
+    "conventional-changelog": "1.1.0",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
-    "gulp-csscomb": "^3.0.7",
-    "gulp-html-replace": "^1.5.5",
-    "gulp-jspm": "^0.5.12",
-    "gulp-modernizr": "^1.0.0-alpha",
-    "gulp-postcss": "^6.1.1",
-    "postcss-calc": "^5.2.1",
-    "postcss-custom-properties": "^5.0.1",
-    "postcss-import": "^8.1.2"
+    "gulp-babel": "^6.1.2",
+    "gulp-bump": "^2.2.0",
+    "gulp-changed": "^1.3.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-protractor": "3.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^1.0.0-alpha.2",
+    "jasmine-core": "^2.4.1",
+    "jspm": "^0.16.41",
+    "karma": "^1.1.2",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-jspm": "2.2.0",
+    "object.assign": "^4.0.4",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-paths": "^2.1.0",
+    "yargs": "^4.8.1"
   },
   "jspm": {
-    "configFile": "src/js/config.jspm.js",
     "dependencies": {
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
-      "keyboardjs": "npm:keyboardjs@^2.2.1",
-      "material-design-lite": "github:google/material-design-lite@^1.1.3",
+      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-rc.1.0.0",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-rc.1.0.0",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-rc.1.0.0",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-rc.1.0.0",
+      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-rc.1.0.0",
+      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-rc.1.0.0",
+      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-rc.1.0.0",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-rc.1.0.0",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-rc.1.0.0",
+      "aurelia-router": "npm:aurelia-router@^1.0.0-rc.1.0.0",
+      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-rc.1.0.0",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-rc.1.0.0",
+      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-rc.1.0.0",
+      "bluebird": "npm:bluebird@3.4.1",
+      "fetch": "github:github/fetch@^1.0.0",
+      "keyboardjs": "npm:keyboardjs@^2.3.1",
+      "text": "github:systemjs/plugin-text@^0.0.8",
       "tone": "npm:tone@^0.7.1",
       "underscore": "npm:underscore@^1.8.3",
       "web-midi-api": "npm:web-midi-api@^1.4.4"
     },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    },
-    "buildConfig": {
-      "transpileES6": true
-    }
+    "devDependencies": {}
   }
 }
