--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "aurelia-bundler": "^0.4.0",
     "aurelia-tools": "^0.2.4",
+    "autoprefixer": "^6.5.0",
     "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
     "babel-plugin-syntax-flow": "^6.8.0",
@@ -43,10 +44,12 @@
     "gulp-babel": "^6.1.2",
     "gulp-bump": "^2.2.0",
     "gulp-changed": "^1.3.1",
+    "gulp-csscomb": "^3.0.8",
     "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-protractor": "3.0.0",
     "gulp-sourcemaps": "^1.6.0",
     "isparta": "^4.0.0",
@@ -60,6 +63,9 @@
     "karma-jasmine": "^1.0.2",
     "karma-jspm": "2.2.0",
     "object.assign": "^4.0.4",
+    "postcss-calc": "^5.3.1",
+    "postcss-custom-properties": "^5.0.1",
+    "postcss-import": "^8.1.2",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.2.2",
     "vinyl-paths": "^2.1.0",
@@ -83,7 +89,7 @@
       "bluebird": "npm:bluebird@3.4.1",
       "fetch": "github:github/fetch@^1.0.0",
       "text": "github:systemjs/plugin-text@^0.0.8",
-      "tone": "npm:tone@^0.7.1",
+      "tone": "npm:tone@^0.8.0",
       "web-midi-api": "npm:web-midi-api@^1.4.4"
     },
     "devDependencies": {}
