--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-1": "^6.5.0",
     "browser-sync": "^2.13.0",
+    "connect-history-api-fallback": "^1.3.0",
     "conventional-changelog": "1.1.0",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
