--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-rc.1.0.0",
       "bluebird": "npm:bluebird@3.4.1",
       "fetch": "github:github/fetch@^1.0.0",
+      "semantic-ui": "github:Semantic-Org/Semantic-UI@^2.2.6",
       "text": "github:systemjs/plugin-text@^0.0.8",
       "tone": "npm:tone@^0.8.0",
       "web-midi-api": "npm:web-midi-api@^1.4.4"
