--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A configurable, modular synthesizer.",
   "keywords": [
     "aurelia",
+    "typescript",
     "webaudio"
   ],
   "homepage": "https://sccherry.github.io/synthia",
@@ -19,53 +20,50 @@
     "url": "http://github.com/sccherry/synthia"
   },
   "scripts": {
+    "prepublish": "typings install",
     "test": "gulp test",
-    "e2e": "gulp serve webdriver-standalone e2e"
+    "e2e": "gulp serve e2e"
   },
   "devDependencies": {
     "aurelia-bundler": "^0.4.0",
-    "autoprefixer": "^6.5.0",
     "aurelia-protractor-plugin": "^1.0.0",
     "aurelia-tools": "^1.0.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.0",
-    "babel-plugin-istanbul": "^2.0.3",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-1": "^6.16.0",
+    "autoprefixer": "6.7.1",
     "browser-sync": "^2.17.5",
     "conventional-changelog": "1.1.0",
     "del": "^2.2.2",
+    "es6-module-loader": "^0.17.11",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-csscomb": "^3.0.8",
     "gulp-bump": "^2.5.0",
     "gulp-changed": "^1.3.2",
-    "gulp-eslint": "^3.0.1",
+    "gulp-csscomb": "3.0.8",
     "gulp-htmlmin": "^3.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.2.0",
+    "gulp-postcss": "6.3.0",
     "gulp-protractor": "3.0.0",
-    "gulp-stylelint": "^3.3.0",
     "gulp-sourcemaps": "^2.2.0",
+    "gulp-stylelint": "3.7.0",
+    "gulp-tslint": "^6.1.3",
+    "gulp-typescript": "^3.1.2",
+    "isparta": "^4.0.0",
     "jasmine-core": "^2.5.2",
     "jspm": "^0.16.47",
     "karma": "^1.3.0",
-    "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
-    "karma-jspm": "2.2.0",
+    "karma-systemjs": "^0.15.0",
     "object.assign": "^4.0.4",
-    "postcss-calc": "^5.3.1",
-    "postcss-custom-properties": "^5.0.1",
-    "postcss-import": "^8.1.2",
+    "postcss-calc": "5.3.1",
+    "postcss-custom-properties": "5.0.1",
+    "postcss-import": "9.1.0",
     "protractor": "^4.0.10",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
+    "systemjs": "0.19.40",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.8",
+    "typings": "^2.0.0",
     "vinyl-paths": "^2.1.0",
     "yargs": "^6.3.0"
   },
@@ -73,6 +71,7 @@
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
+      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.1",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0",
