Remove Web MIDI API polyfill

--- a/package.json
+++ b/package.json
@@ -86,8 +86,7 @@
       "bluebird": "npm:bluebird@3.4.1",
       "fetch": "github:github/fetch@^1.0.0",
       "text": "github:systemjs/plugin-text@^0.0.8",
-      "tone": "npm:tone@^0.8.0",
-      "web-midi-api": "npm:web-midi-api@^1.4.4"
+      "tone": "npm:tone@^0.8.0"
     },
     "devDependencies": {}
   },
