--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0",
       "bluebird": "npm:bluebird@3.4.1",
       "fetch": "github:github/fetch@^1.0.0",
+      "material-design-lite": "github:google/material-design-lite@^1.3.0",
       "text": "github:systemjs/plugin-text@^0.0.8",
       "tone": "npm:tone@^0.8.0"
     },
