--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0",
       "fetch": "github:github/fetch@^1.0.0",
       "material-design-lite": "github:google/material-design-lite@^1.3.0",
+      "rxjs": "npm:rxjs@^5.4.0",
       "text": "github:systemjs/plugin-text@^0.0.8",
       "tone": "npm:tone@^0.10.0"
     },
