--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,25 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "system",
+    "module": "commonjs",
     "lib": [
       "es6",
       "dom"
     ],
-    "allowJs": true,
-    "checkJs": true,
-    "declaration": true,
+    "paths": {
+      "rxjs/*": ["node_modules/rxjs/*"],
+      "snabbdom/*": ["node_modules/snabbdom/*"]
+    },
+    "allowJs": false,
+    "checkJs": false,
+    "declaration": false,
     "sourceMap": true,
-    "outDir": "./dist",
+    "outFile": "./dist/main.js",
     "removeComments": true,
     "noEmit": false,
     "importHelpers": false,
     "downlevelIteration": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
 
     "strict": true,
     "noImplicitAny": true,
@@ -30,10 +34,6 @@
 
     "moduleResolution": "node",
     "baseUrl": "./",
-    "paths": {
-      "rxjs/*": ["jspm_packages/npm/rxjs@5.4.0/*"],
-      "snabbdom/*": ["jspm_packages/npm/snabbdom@0.6.9/*"]
-    },
     "allowSyntheticDefaultImports": false,
 
     "inlineSourceMap": false,
@@ -47,7 +47,6 @@
   ],
   "exclude": [
     "dist",
-    "jspm_packages",
     "node_modules",
     "src/**/*.spec.ts"
   ]
