--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,17 +1,21 @@
 {
-  "manifest_version": 1,
-  "name": "Synthia",
-  "version": "0.5.1",
-  "default_locale": "en",
-  "description": "A configurable, modular synthesizer.",
-  "display": "fullscreen",
-  "orientation": "portrait",
-  "icons": [{
-    "src": "./assets/favicon-192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }],
-  "homepage_url": "./index.html",
-  "offline_enabled": true,
-  "theme_color": "#2b8a3e"
+  "name": "Soundfont",
+  "short_name": "SF",
+  "description": "A soundfont player.",
+  "start_url": "./index.html",
+  "display": "minimal-ui",
+  "icons": [
+    {
+      "src": "./assets/favicon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/favicon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#2b8a3e",
+  "background_color": "#ffffff"
 }
