--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.5.1",
   "description": "A soundfont player.",
   "main": "dist/main.js",
+  "jsnext:main": "src/scripts/main.js",
+  "module": "src/scripts/main.js",
   "directories": {
     "lib": "dist"
   },
@@ -43,7 +45,11 @@
   },
   "devDependencies": {
     "autoprefixer": "7.1.1",
-    "awesome-typescript-loader": "3.2.1",
+    "babel-core": "6.25.0",
+    "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-preset-env": "1.6.0",
     "cpy-cli": "1.0.1",
     "css-loader": "0.28.4",
     "cssnano": "3.10.0",
@@ -56,7 +62,6 @@
     "postcss-loader": "2.0.6",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
-    "typescript": "2.3.4",
     "webpack": "3.4.1",
     "webpack-dev-server": "2.6.1"
   }
