--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "clean": "rimraf dist && mkdirp dist/assets",
     "copy": "cpy '*.{ico,xml,json}' 'assets/*.{png,svg}' 'service-worker.js' '../dist' --cwd=src --parents",
-    "serve": "npm run watch:html & NODE_ENV=development webpack-dev-server --content-base dist/ --port 3000",
+    "serve": "npm run watch:html & NODE_ENV=development webpack-dev-server --content-base dist/ --port 3000 --host 0.0.0.0",
     "build:html": "nunjucks *.njk data.json -p src -o dist",
     "build:app": "NODE_ENV=production webpack",
     "prebuild": "npm run clean && npm run copy",
