--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:html": "nunjucks *.njk data.json -p src -o dist",
     "build:app": "NODE_ENV=production webpack",
     "prebuild": "npm run clean && npm run copy",
+    "prewatch:html": "npm run build:html",
     "watch:html": "onchange 'src/**/*.njk' -- npm run build:html",
     "build": "npm run build:html & npm run build:app",
     "test": "echo \"Error: no test specified \" && exit 1",
