--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "scripts": {
     "clean": "rimraf dist && mkdirp dist/assets",
     "copy": "cpy '*.{ico,xml,json}' 'assets/*.{png,svg}' 'service-worker.js' '../dist' --cwd=src --parents",
+    "lint:css": "csscomb src/styles && stylelint src/styles/**/*.css --fix",
+    "lint:js": "eslint src/scripts/**/*.js --fix",
+    "lint": "npm run lint:css & npm run lint:js",
     "serve": "npm run watch:html & NODE_ENV=development webpack-dev-server --content-base dist/ --port 3000 --host 0.0.0.0",
     "build:html": "nunjucks *.njk data.json -p src -o dist",
     "build:app": "NODE_ENV=production webpack",
@@ -40,6 +43,10 @@
     "url": "https://github.com/sccherry/soundfont/issues"
   },
   "homepage": "https://github.com/sccherry/soundfont#readme",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "dependencies": {
     "redux": "3.7.2",
     "snabbdom": "0.6.9",
@@ -47,6 +54,7 @@
     "tachyons": "4.8.0"
   },
   "devDependencies": {
+    "autoprefixer": "7.1.6",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
@@ -54,11 +62,25 @@
     "babel-preset-env": "1.6.0",
     "cpy-cli": "1.0.1",
     "css-loader": "0.28.4",
+    "csscomb": "4.2.0",
+    "eslint": "4.10.0",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-plugin-compat": "2.1.0",
+    "eslint-plugin-import": "2.8.0",
     "extract-text-webpack-plugin": "3.0.0",
     "mkdirp": "0.5.1",
     "nunjucks-cli": "0.5.1",
     "onchange": "3.2.1",
+    "postcss-custom-media": "6.0.0",
+    "postcss-custom-properties": "6.2.0",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.8",
+    "postcss-normalize": "4.0.0",
     "rimraf": "2.6.1",
+    "style-loader": "0.19.0",
+    "stylelint": "8.2.0",
+    "stylelint-config-standard": "17.0.0",
+    "stylelint-no-unsupported-browser-features": "1.0.1",
     "webpack": "3.4.1",
     "webpack-dev-server": "2.6.1"
   }
