--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "redux": "3.7.2",
     "snabbdom": "0.6.9",
     "soundfont-player": "0.10.5",
-    "tachyons": "4.8.0"
+    "tachyons": "4.8.0",
+    "zen-observable": "0.6.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
