--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
   ],
   "dependencies": {
     "redux": "3.7.2",
+    "rxjs": "5.5.2",
     "snabbdom": "0.6.9",
-    "tachyons": "4.8.0",
-    "zen-observable": "0.6.0"
+    "tachyons": "4.8.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
