Copy Tachyons files and only include used styles

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "clean": "rimraf dist && mkdirp dist/assets",
     "copy": "cpy '*.{ico,xml,json}' 'assets/*.{png,svg}' 'service-worker.js' '../dist' --cwd=src --parents",
-    "lint:css": "csscomb src/styles && stylelint src/styles/**/*.css --fix",
+    "lint:css": "csscomb src/styles && stylelint src/styles --fix",
     "lint:js": "eslint src/scripts --fix",
     "lint": "npm run lint:css & npm run lint:js",
     "serve": "npm run watch:html & NODE_ENV=development webpack-dev-server --content-base dist/ --port 3000 --host 0.0.0.0",
@@ -50,8 +50,7 @@
   "dependencies": {
     "redux": "3.7.2",
     "rxjs": "5.5.2",
-    "snabbdom": "0.6.9",
-    "tachyons": "4.8.0"
+    "snabbdom": "0.6.9"
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
