--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   ],
   "dependencies": {
     "redux": "3.7.2",
-    "rxjs": "5.5.2",
-    "snabbdom": "0.6.9"
+    "snabbdom": "0.6.9",
+    "zen-observable": "0.8.8"
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
