Update manifest short name

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Soundfont",
-  "short_name": "Sf",
+  "short_name": "Soundfont",
   "description": "A soundfont player.",
   "start_url": "./",
   "display": "minimal-ui",
