--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "lint:css": "csscomb src/styles && stylelint src/styles --fix",
     "lint:js": "eslint src/scripts --fix",
     "lint": "npm run lint:css & npm run lint:js",
-    "serve": "npm run watch:html & NODE_ENV=development webpack-dev-server --content-base dist/ --port 3000 --host 0.0.0.0",
+    "serve": "npm run watch:html & NODE_ENV=development webpack-dev-server --config webpack.dev.js",
     "build:html": "nunjucks *.njk src/data.json -p src -o dist",
-    "build:app": "NODE_ENV=production webpack",
+    "build:bundle": "webpack --config webpack.prod.js",
     "prebuild": "npm run clean && npm run copy",
     "prewatch:html": "npm run build:html",
     "watch:html": "onchange 'src/**/*.njk' -- npm run build:html",
-    "build": "npm run build:html & npm run build:app",
+    "build": "npm run build:html & NODE_ENV=production npm run build:bundle",
     "test": "echo \"Error: no test specified \" && exit 1",
     "start": "npm run serve"
   },
@@ -52,34 +52,37 @@
     "zen-observable": "0.8.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "autoprefixer": "7.1.6",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-preset-env": "1.6.0",
+    "babel-loader": "^8.0.6",
     "cpy-cli": "1.0.1",
-    "css-loader": "0.28.4",
+    "css-loader": "^2.1.1",
     "csscomb": "4.2.0",
     "eslint": "4.10.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-compat": "2.1.0",
     "eslint-plugin-import": "2.8.0",
-    "extract-text-webpack-plugin": "3.0.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "mkdirp": "0.5.1",
     "nunjucks-cli": "0.5.1",
     "onchange": "3.2.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-custom-media": "6.0.0",
     "postcss-custom-properties": "6.2.0",
     "postcss-import": "11.0.0",
-    "postcss-loader": "2.0.8",
+    "postcss-loader": "^3.0.0",
     "postcss-normalize": "4.0.0",
     "rimraf": "2.6.1",
-    "style-loader": "0.19.0",
+    "style-loader": "^0.23.1",
     "stylelint": "8.2.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-no-unsupported-browser-features": "1.0.1",
-    "webpack": "3.4.1",
-    "webpack-dev-server": "2.6.1"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.1"
   }
 }
