Use eleventy to build site HTML

--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
     "dist"
   ],
   "scripts": {
-    "clean": "rimraf dist && mkdirp dist/assets",
-    "copy": "cpy '*.{ico,xml,json}' 'assets/*.{png,svg}' 'service-worker.js' '../dist' --cwd=src --parents",
+    "clean": "rimraf dist",
     "lint:css": "csscomb src/styles && stylelint src/styles --fix",
     "lint:js": "eslint src/scripts --fix",
     "lint": "npm run lint:css & npm run lint:js",
-    "serve": "npm run watch:html & NODE_ENV=development webpack-dev-server --config webpack.dev.js",
-    "build:html": "nunjucks *.njk src/data.json -p src -o dist",
+    "serve": "ELEVENTY_ENV=development npm run watch:site & NODE_ENV=development webpack-dev-server --config webpack.dev.js",
+    "build:site": "eleventy --config eleventy.config.js",
     "build:bundle": "webpack --config webpack.prod.js",
-    "prebuild": "npm run clean && npm run copy",
-    "prewatch:html": "npm run build:html",
-    "watch:html": "onchange 'src/**/*.njk' -- npm run build:html",
-    "build": "npm run build:html & NODE_ENV=production npm run build:bundle",
+    "prebuild": "npm run clean",
+    "watch:site": "npm run build:site -- --watch",
+    "build": "ELEVENTY_ENV=production npm run build:site & NODE_ENV=production npm run build:bundle",
     "test": "echo \"Error: no test specified \" && exit 1",
     "start": "npm run serve"
   },
@@ -52,13 +50,13 @@
     "zen-observable": "0.8.8"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.8.3",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "autoprefixer": "7.1.6",
     "babel-loader": "^8.0.6",
-    "cpy-cli": "1.0.1",
     "css-loader": "^2.1.1",
     "csscomb": "4.2.0",
     "eslint": "4.10.0",
@@ -66,9 +64,6 @@
     "eslint-plugin-compat": "2.1.0",
     "eslint-plugin-import": "2.8.0",
     "mini-css-extract-plugin": "^0.6.0",
-    "mkdirp": "0.5.1",
-    "nunjucks-cli": "0.5.1",
-    "onchange": "3.2.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-custom-media": "6.0.0",
     "postcss-custom-properties": "6.2.0",
