--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "autoprefixer": "7.1.6",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
@@ -65,8 +66,6 @@
     "eslint-plugin-import": "2.8.0",
     "mini-css-extract-plugin": "^0.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-custom-media": "6.0.0",
-    "postcss-custom-properties": "6.2.0",
     "postcss-import": "11.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "4.0.0",
@@ -75,6 +74,7 @@
     "stylelint": "8.2.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-no-unsupported-browser-features": "1.0.1",
+    "tailwindcss": "^1.0.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
