--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,12 @@
 {
-  "extends": "stylelint-config-standard",
-  "plugins": [
-    "stylelint-no-unsupported-browser-features"
-  ],
+  "extends": ["stylelint-config-standard"],
+  "plugins": ["stylelint-no-unsupported-browser-features"],
   "rules": {
-    "plugin/no-unsupported-browser-features": [true, {
-      "severity": "warning"
-    }]
+    "plugin/no-unsupported-browser-features": [
+      true,
+      {
+        "severity": "warning"
+      }
+    ]
   }
 }
