--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "lint:css": "csscomb src/styles && stylelint src/styles --fix",
+    "lint:css": "stylelint src/styles --fix",
     "lint:js": "eslint src/scripts --fix",
     "lint": "npm run lint:css & npm run lint:js",
     "serve": "ELEVENTY_ENV=development npm run watch:site & NODE_ENV=development webpack-dev-server --config webpack.dev.js",
@@ -59,7 +59,6 @@
     "autoprefixer": "7.1.6",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
-    "csscomb": "4.2.0",
     "eslint": "4.10.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-compat": "2.1.0",
@@ -71,9 +70,9 @@
     "postcss-normalize": "4.0.0",
     "rimraf": "2.6.1",
     "style-loader": "^0.23.1",
-    "stylelint": "8.2.0",
-    "stylelint-config-standard": "17.0.0",
-    "stylelint-no-unsupported-browser-features": "1.0.1",
+    "stylelint": "^10.0.1",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
     "tailwindcss": "^1.0.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
