--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:bundle": "webpack --config webpack.prod.js",
     "prebuild": "npm run clean",
     "watch:site": "npm run build:site -- --watch",
-    "build": "ELEVENTY_ENV=production npm run build:site & NODE_ENV=production npm run build:bundle",
+    "build": "NODE_ENV=production npm run build:bundle && ELEVENTY_ENV=production npm run build:site",
     "test": "echo \"Error: no test specified \" && exit 1",
     "start": "npm run serve"
   },
@@ -42,36 +42,35 @@
   },
   "homepage": "https://github.com/sccherry/soundfont#readme",
   "dependencies": {
-    "zen-observable": "0.8.8"
+    "zen-observable": "^0.8.14"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.8.3",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@11ty/eleventy": "^0.9.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "autoprefixer": "7.1.6",
     "babel-loader": "^8.0.6",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-compat": "^3.1.1",
-    "eslint-plugin-import": "^2.17.3",
-    "mini-css-extract-plugin": "^0.6.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-import": "11.0.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-compat": "^3.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-normalize": "4.0.0",
-    "rimraf": "2.6.1",
-    "style-loader": "^0.23.1",
-    "stylelint": "^10.0.1",
+    "postcss-normalize": "^8.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "rimraf": "^3.0.0",
+    "style-loader": "^1.0.0",
+    "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-no-unsupported-browser-features": "^3.0.2",
-    "tailwindcss": "^1.0.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1"
+    "tailwindcss": "^1.1.2",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.2"
   }
 }
