--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "html-minifier": "^4.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
