Update email address

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "midi",
     "pwa"
   ],
-  "author": "Steve Cherry <stevenccherry@gmail.com> (https://stevecherry.net/)",
+  "author": "Steve Cherry <steve@stevecherry.net> (https://stevecherry.net/)",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/sccherry/soundfont/issues"
